--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <p id="download"><a href="#download">Download Excursion (Coming soon!)</a></p>
 
+<video src="./resources/videos/excursion-video.mp4" width="320" height="240" controls> </video>
 
+<h1>Your Personal Travel Guide</h1>
+<h2>Excursion remembers places you like, and recommends new points of interest around you </h2>
+<img src="./resources/images/camp.jpg">
+
+<p><img src="./resources/images/phone.png"></p>
+<h1>Coming Soon for iPhone and Android</h1>
+<p id="download"><a href="#download">Download Excursion (Coming soon!)</a></p>
+<h3>© Excursion</h3>
   </body>
 </html>
